--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,33 @@ typings/
 # dotenv environment variables file
 .env
 
+
+# Created by https://www.gitignore.io/api/hexo,windows
+
+### Hexo ###
+db.json
+public/
+
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+
+# End of https://www.gitignore.io/api/hexo,windows
