--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://codesharp.net
 root: /
-permalink: :title/
+permalink: posts/:title/
 permalink_defaults:
 
 # Directory
